--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/style.css">
     <title>EM Fitness</title>
+</head>
+
+<body class="conteudo" >
     <header>
         <div class="cabecalho">
             <img class="logo" src="./assets/logo.png" alt="">
             <p>O corpo alcança o que a mente acredita!</p>
         </div>
     </header>
-</head>
 
-<body >
+    <main>
     <div class="paragrafo">
         <p class="titulo">DESDE DE 20XX MUDANDO VIDAS!</p>
          <p>Bem-vindo à EM Fitness: O Seu Destino para um Estilo de Vida Saudável!</p>
@@ -23,8 +25,8 @@
         </div>
 
     <div class="aparelho">
-        <img class="aparelhos" src="./assets/aparelho1.png" alt="">
         <img class="aparelhos" src="./assets/aparelho2.png" alt="">
+        <img class="aparelhos" src="./assets/aparelho1.png" alt="">
         <img class="aparelhos" src="./assets/aparelho3.png" alt="">
         
     </div>
@@ -34,7 +36,7 @@
         <p class="titulo">TREINADORES ESPECIALIZADOS</p>
         <div class="treinadores">
              <p class="texto" >Nossa equipe de treinadores certificados está aqui para guiá-lo em cada etapa do seu percurso fitness. Seja você um iniciante que está dando os primeiros passos ou um atleta experiente em busca de novos desafios, nossos profissionais estão prontos para criar programas personalizados que se alinhem aos seus objetivos.</p>
-             <img src="./assets/treinadores.png" alt="">
+             <img class="treinador" src="./assets/treinadores.png" alt="">
         </div>
         <p class="titulo">VENHA NOS VISITAR</p>
         <p class="texto">Estamos ansiosos para recebê-lo em nosso espaço vibrante e motivador. Agende uma visita para conhecer nossas instalações, conversar com nossos treinadores e descobrir como a EM Fitness pode ser o impulso que você precisa para atingir suas metas de fitness</p>
@@ -54,20 +56,24 @@
                 <p class="texto">Entre com contato conosco:</p>
                 <p class="texto">(13) 99600-0000</p>
                 <p class="texto">emfitness@gmail.com</p>
-                <div class="logo_contato">
-                  <a href="https://www.instagram.com/academiaemfitness/"><img src="./assets/instagram.png" alt=""></a>
-                 <a href="https://api.whatsapp.com/send?phone=5513997069960"><img src="./assets/whataspp.png" alt=""></a>
-                    <a href="https://www.facebook.com/emfitnesspedrodetoledo?mibextid=ZbWKwL"><img src="./assets/facebook.png" alt=""></a>
+                    <div class="logo_contato">
+                        <a href="https://www.instagram.com/academiaemfitness/"><img class="logo" src="./assets/instagram.png" alt=""></a>
+                        <a href="https://api.whatsapp.com/send?phone=5513997069960"><img class="logo" src="./assets/whataspp.png" alt=""></a>
+                        <a href="https://www.facebook.com/emfitnesspedrodetoledo?mibextid=ZbWKwL"><img class="logo" src="./assets/facebook.png" alt=""></a>
+                    </div>
+            </div>
+                <div>
+                     <a  href="https://maps.app.goo.gl/wiJyXmw1ZvdsdpQs6"><img class="mapa" src="./assets/mapa.png" alt=""></a>
+         
                 </div>
-            </div>
-            <div>
-                <a href="https://maps.app.goo.gl/wiJyXmw1ZvdsdpQs6"><img src="./assets/mapa.png" alt=""></a>
-            </div>
         </div>
     </div>
-</body>
-<footer class="rodape">
-    <p>EM Fitness - 2024</p>
+</main>
 
-</footer>
+    <footer class="rodape">
+        <p class="texto_rodape">EM Fitness - 2024</p>
+    </footer>
+
+</body>
+
 </html>
